docs(ui): Wave 5 P4 — final GAUNTLET + bundle smoke verified, RC quality confirmed
Closes docs/superpower/reviews/wave5-hardening.md. Full release-candidate gate
run end to end: UI lint:tokens + test:ci (804/0/5) + prod build, backend
reactor mvn -o clean test (32/0/0 across 5 modules; the uncommitted side-task
files ControlApi.java/ControlApiConnectionsTest.java untouched and caused no
failures), package.ps1 bundle (jlink runtime built clean, no fallback needed),
and a live boot-from-artifact smoke (/health 200, UI index 200) on an
alternate port since :8080/:8090 were both externally occupied.

Wave 5 (Hardening) is now COMPLETE: P1 a11y coverage (5eb7243), P2 responsive
sweep (3b2954a), P3 design-system + settings sweep (9c888a8), P4 this
verification pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>